--- a/Template/Pages/style.css
+++ b/Template/Pages/style.css
@@ -72,20 +72,22 @@
     align-items: center;
     justify-content: center;
 }
-#h3{
+h3{
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#footer{
-    width: 100.3%;
-    height: 50px;
-    background-color: green;
-    position: relative;
-    clear: both;
-
-}
+.footer {
+    width: 100%;
+    font-size: 1.5rem;
+    text-align: center;
+    overflow: visible;
+    color: #004289;
+    font-weight: bold;
+    height: 2rem;
+    background-color: #CFFEEE;
+  }
 #left{
     float:left;
     width:100px;
